--- a/Sprint 3/desafio/desafio.ipynb
+++ b/Sprint 3/desafio/desafio.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "[10841 rows x 13 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "[10358 rows x 13 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -672,81 +672,34 @@
      "output_type": "stream",
      "text": [
       "                               App      Installs\n",
-      "341                       Hangouts  1.000000e+09\n",
-      "3928                       YouTube  1.000000e+09\n",
-      "451                          Gmail  1.000000e+09\n",
-      "3996  Google Chrome: Fast & Secure  1.000000e+09\n",
-      "1700                Subway Surfers  1.000000e+09\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].astype(str)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].str.replace('Free', '', regex=False)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].str.replace('+', '', regex=False)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].str.replace(',', '', regex=False)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:9: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].replace('', np.nan)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = df_google['Installs'].astype(float)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\3968735101.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Installs'] = pd.to_numeric(df_google['Installs'], errors='coerce')\n"
+      "341                       Hangouts  1000000000.0\n",
+      "3928                       YouTube  1000000000.0\n",
+      "451                          Gmail  1000000000.0\n",
+      "3996  Google Chrome: Fast & Secure  1000000000.0\n",
+      "1700                Subway Surfers  1000000000.0\n"
      ]
     }
    ],
    "source": [
-    "df_google['Installs'] = df_google['Installs'].astype(str)\n",
+    "# Converter a coluna 'Installs' para string\n",
+    "df_google.loc[:, 'Installs'] = df_google['Installs'].astype(str)\n",
     "\n",
-    "# Remover o valor 'Free' e o símbolo '+'\n",
-    "df_google['Installs'] = df_google['Installs'].str.replace('Free', '', regex=False)\n",
-    "df_google['Installs'] = df_google['Installs'].str.replace('+', '', regex=False)\n",
-    "df_google['Installs'] = df_google['Installs'].str.replace(',', '', regex=False)\n",
+    "# Remover o valor 'Free', o símbolo '+' e as vírgulas\n",
+    "df_google.loc[:, 'Installs'] = df_google['Installs'].str.replace('Free', '', regex=False)\n",
+    "df_google.loc[:, 'Installs'] = df_google['Installs'].str.replace('+', '', regex=False)\n",
+    "df_google.loc[:, 'Installs'] = df_google['Installs'].str.replace(',', '', regex=False)\n",
     "\n",
     "# Substituir strings vazias por NaN\n",
-    "df_google['Installs'] = df_google['Installs'].replace('', np.nan)\n",
+    "df_google.loc[:, 'Installs'] = df_google['Installs'].replace('', np.nan)\n",
     "\n",
     "# Converter a coluna 'Installs' de string para float\n",
-    "df_google['Installs'] = df_google['Installs'].astype(float)\n",
-    "df_google['Installs'] = pd.to_numeric(df_google['Installs'], errors='coerce')\n",
+    "df_google.loc[:, 'Installs'] = pd.to_numeric(df_google['Installs'], errors='coerce')\n",
     "\n",
-    "# Ordenar os aplicativos pela coluna 'Installs' em ordem decrescente\n",
+    "# Ordenar os aplicativos pela coluna 'Installs' em ordem decrescente e selecionar os 5 primeiros\n",
     "top_5_apps = df_google.sort_values(by='Installs', ascending=False).head(5)\n",
     "\n",
-    "print(top_5_apps[['App', 'Installs']])"
+    "# Exibir os 5 melhores aplicativos com as colunas 'App' e 'Installs'\n",
+    "print(top_5_apps.loc[:, ['App', 'Installs']])\n"
    ]
   },
   {
@@ -758,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -766,11 +719,11 @@
      "output_type": "stream",
      "text": [
       "                               App      Installs\n",
-      "341                       Hangouts  1.000000e+09\n",
-      "3928                       YouTube  1.000000e+09\n",
-      "451                          Gmail  1.000000e+09\n",
-      "3996  Google Chrome: Fast & Secure  1.000000e+09\n",
-      "1700                Subway Surfers  1.000000e+09\n"
+      "341                       Hangouts  1000000000.0\n",
+      "3928                       YouTube  1000000000.0\n",
+      "451                          Gmail  1000000000.0\n",
+      "3996  Google Chrome: Fast & Secure  1000000000.0\n",
+      "1700                Subway Surfers  1000000000.0\n"
      ]
     },
     {
@@ -823,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -903,31 +856,22 @@
       "                           App  Price\n",
       "4367  I'm Rich - Trump Edition  400.0\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\1268250333.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Price'] = df_google['Price'].astype(str)\n",
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\1268250333.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Price'] = df_google['Price'].str.replace('$','').str.replace('Everyone','0').astype(float)\n"
-     ]
     }
    ],
    "source": [
-    "df_google['Price'] = df_google['Price'].astype(str)\n",
-    "df_google['Price'] = df_google['Price'].str.replace('$','').str.replace('Everyone','0').astype(float) \n",
+    "# Converter a coluna 'Price' para string\n",
+    "df_google.loc[:, 'Price'] = df_google['Price'].astype(str)\n",
+    "\n",
+    "# Remover o símbolo '$' e substituir 'Everyone' por '0', em seguida, converter para float\n",
+    "df_google.loc[:, 'Price'] = df_google['Price'].str.replace('$', '', regex=False)\n",
+    "df_google.loc[:, 'Price'] = df_google['Price'].str.replace('Everyone', '0', regex=False)\n",
+    "df_google.loc[:, 'Price'] = df_google['Price'].astype(float)\n",
+    "\n",
+    "# Ordenar os aplicativos pela coluna 'Price' em ordem decrescente e selecionar o mais caro\n",
     "mais_caro = df_google.sort_values(by='Price', ascending=False).head(1)\n",
-    "print(mais_caro[['App', 'Price']])"
+    "\n",
+    "# Exibir o aplicativo mais caro com as colunas 'App' e 'Price'\n",
+    "print(mais_caro.loc[:, ['App', 'Price']])\n"
    ]
   },
   {
@@ -939,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1016,36 +960,23 @@
       "7536  Security Master - Antivirus, VPN, AppLock, Boo...  24900999.0\n",
       "1660                                       Clash Royale  23133508.0\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fabia\\AppData\\Local\\Temp\\ipykernel_12900\\1659870389.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_google['Reviews'] = pd.to_numeric(df_google['Reviews'], errors='coerce')\n"
-     ]
     }
    ],
    "source": [
-    "# Converter 'Reviews' para numérico \n",
-    "df_google['Reviews'] = pd.to_numeric(df_google['Reviews'], errors='coerce')\n",
+    "# Converter 'Reviews' para numérico (inteiros ou flutuantes)\n",
+    "df_google.loc[:, 'Reviews'] = pd.to_numeric(df_google['Reviews'], errors='coerce')\n",
     "\n",
     "# Verificar o tipo de dados da coluna 'Reviews'\n",
-    "print(df_google['Reviews'].dtype)  \n",
+    "print(df_google['Reviews'].dtype)  # Isso mostrará se é float64 ou int64\n",
     "\n",
     "# Remover duplicatas com base no nome do aplicativo (coluna 'App')\n",
     "df_google = df_google.drop_duplicates(subset='App', keep='first')\n",
     "\n",
-    "# Ordenar o DataFrame pelo número de reviews em ordem decrescente\n",
+    "# Ordenar o DataFrame pelo número de reviews em ordem decrescente e selecionar os 10 primeiros\n",
     "top_10_apps_reviews = df_google.sort_values(by='Reviews', ascending=False).head(10)\n",
     "\n",
     "# Exibir o nome dos aplicativos e o número de reviews\n",
-    "print(top_10_apps_reviews[['App', 'Reviews']])\n",
-    "\n"
+    "print(top_10_apps_reviews.loc[:, ['App', 'Reviews']])\n"
    ]
   },
   {
@@ -1057,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1076,8 @@
    ],
    "source": [
     "tipo_contagem = df_google['Type'].value_counts()\n",
-    "print(tipo_contagem)\n"
+    "print(tipo_contagem)\n",
+    "\n"
    ]
   },
   {
@@ -1157,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
